--- a/kestrak/css/css.scss
+++ b/kestrak/css/css.scss
@@ -14,7 +14,7 @@ body, html {
 body {
 	font-size: 1.1em;
 	font-family: 'Lato', sans-serif;
-	background-image: url("/kestrak/images/stars.jpg");
+	background-image: url("../images/stars.jpg");
 	background-repeat: repeat-y;
 	background-position: center center;
 	background-size: 100% 100%;
@@ -42,7 +42,7 @@ body {
 
 .outbox {
 	&.header {
-		background-image: url("/kestrak/images/background_1.jpg");
+		background-image: url("../images/background_1.jpg");
 		.inbox {
 			padding-top: 12%;
 			padding-bottom: 12%;
@@ -74,7 +74,7 @@ body {
 							width: 100%;
 							background-color: #ED1C24;
 							transition: background-color .4s;
-							background-image: url("/kestrak/images/search_button_2.png");
+							background-image: url("../images/search_button_2.png");
 							background-repeat:no-repeat;
 							background-size: auto 90%;
 							background-position: center;
@@ -94,7 +94,7 @@ body {
 				}
 			}
 			.arrow {
-				background-image: url("/kestrak/images/arrow.png");
+				background-image: url("../images/arrow.png");
 				background-repeat:no-repeat;
 				//background-color: rgba(255, 255, 255, 0.6);
 				background-size: auto 50px;
@@ -109,7 +109,7 @@ body {
 		}
 	}
 	&.result {
-		background-image: url("/kestrak/images/background_2.jpg");
+		background-image: url("../images/background_2.jpg");
 		padding-top: 3%;
 		&:before {
 			background-color: rgba(0,0,0,.4);
